<resources>
    <string name="app_name" translatable="false">VLC Benchmark</string>
    <string name="upload_results">Upload</string>
    <string name="default_percent_value">0 %</string>
    <string name="no_results">No result found, please run a test.</string>
    <string name="settings_page">Settings</string>
    <string name="results_page">Results</string>
    <string name="home_nav">Home</string>
    <string name="result_nav">Results</string>
    <string name="settings_nav">Settings</string>
    <string name="title_home">VLC Benchmark</string>
    <string name="title_results">Results</string>
    <string name="title_settings">Settings</string>
    <string name="general_pref_category">General</string>
    <string name="misc_pref_category">Misc</string>
    <string name="storage_pref_category">Storage</string>
    <string name="about_pref">About</string>
    <string name="delete_saves_pref">Delete benchmarks</string>
    <string name="delete_saves_key">delete_saves_key</string>
    <string name="delete_samples_pref">Delete video samples</string>
    <string name="delete_samples_key">delete_samples_key</string>
    <string name="connect_pref">Connect to Google account</string>
    <string name="connect_key">connect_key</string>
    <string name="disconnect_pref">Disconnect: </string>
    <string name="disconnect_key">disconnect_key</string>
    <string name="storage_pref">File location</string>
    <string name="storage_key">storage_key</string>
    <string name="internal_memory">Internal Memory</string>
    <string name="sdcard">SD Card: %1$s</string>
    <string name="about_description">VLCBenchmark is a tool to benchmark android devices\' video capabilities using the VLC Media Player.</string>
    <string name="about_copyright" translatable="false">Copyleft &#169; 2016&#8211;2019 by VideoLAN.</string>
    <string name="about_authors" translatable="false">Jean-Baptiste&#160;Kempf, Geoffrey&#160;Métais, Alexandre&#160;Perraud, Thomas&#160;Guillem, Benoit&#160;Du&#160;Payrat, Bastien&#160;Penavayre, Duncan&#160;McNamara</string>
    <string name="about_revision">Revision:</string>
    <string name="about_compiled_by">This VLCBenchmark version is compiled by:</string>
    <string name="about_link">https://www.videolan.org</string>
    <string name="about_bench_link">https://bench.videolabs.io</string>
    <string name="about_vlc_min">VLC version minimum: %1$s</string>
    <string name="tab_about">About</string>
    <string name="tab_licence">Licence</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_oups">Oups &#8230;</string>
    <string name="dialog_title_missing_vlc">Missing VLC</string>
    <string name="dialog_title_outdated_vlc">Outdated VLC</string>
    <string name="dialog_title_testing">Testing &#8230;</string>
    <string name="dialog_title_file_deletion">File deletion</string>
    <string name="dialog_title_sample_deletion">Sample deletion</string>
    <string name="dialog_title_downloading">Preparing files &#8230;</string>
    <string name="dialog_title_checking_files">Checking files</string>
    <string name="dialog_title_success">Success</string>
    <string name="dialog_title_previous_bench">Previous benchmark</string>
    <string name="dialog_title_hello">Hello</string>
    <string name="dialog_title_upload_results">Uploading results &#8230;</string>
    <string name="dialog_title_result_upload">Result upload</string>
    <string name="dialog_title_file_copy">Copying files</string>
    <string name="dialog_text_no_internet">"Cannot connect to the internet, please turn wifi on and retry."</string>
    <string name="dialog_text_sample">There was a problem while checking samples</string>
    <string name="dialog_text_err_google">There was a problem while connecting to Google</string>
    <string name="dialog_text_err_upload">There was a problem while uploading the results.</string>
    <string name="dialog_text_upload_success">Thank you for uploading your results.\n\nYou can check them out and others on our website.</string>
    <string name="dialog_text_downloading">Downloading &#8230;</string>
    <string name="dialog_text_testing">Testing &#8230;</string>
    <string name="dialog_text_download_error">There was an error during download</string>
    <string name="dialog_text_missing_vlc">You need the latest VLC Media Player to start a benchmark (VLC-Android %1$s).\nPlease install it to continue.</string>
    <string name="dialog_text_oups">There was an unexpected problem</string>
    <string name="dialog_text_battery_warning">You only have %1$d %% of battery charge left, you should plug your phone</string>
    <string name="dialog_text_file_deletion_success">Deleted all benchmark results</string>
    <string name="dialog_text_file_deletion_failure">Failed to delete all benchmark results</string>
    <string name="dialog_text_sample_deletion_success">Deleted all test samples</string>
    <string name="dialog_text_sample_deletion_failure">Failed to delete all test samples</string>
    <string name="dialog_text_deletion_confirmation">Are you sure you want to delete these files ?</string>
    <string name="dialog_text_save_failure">There was a problem while saving the benchmark results.</string>
    <string name="dialog_text_file_creation_failure">There was a problem while creating files</string>
    <string name="dialog_text_loading_results_failure">There was a problem while loading results</string>
    <string name="dialog_text_no_wifi">You are not connected to wifi</string>
    <string name="dialog_text_invalid_file">This file is corrupted.\nPlease restart the download to replace it.</string>
    <string name="dialog_text_vlc_failed">Failed to start VLC.</string>
    <string name="dialog_text_no_touch_warning">The benchmark is about to start, and will now alternate between VLC Android and the benchmark app. During the VLC Android phases, the interface will not be responsive</string>
    <string name="dialog_text_missing_space">Can\'t download files, you are missing %1$s of free space</string>
    <string name="dialog_text_previous_bench">There is a previous benchmark that was interrupted at sample %1$d out of %2$d. Do you want to continue or discard it?</string>
    <string name="dialog_text_error_connect">Could not connect to our database. Please try again later.</string>
    <string name="dialog_text_error_io">There was a problem while storing the downloaded media.</string>
    <string name="dialog_text_error_conf">There was a problem fetching configuration files.</string>
    <string name="dialog_text_initial_warning">VLCBenchmark will extensively test your phone\'s video capabilities.\n\nIt will download a large amount of files and will run for several hours.\nFurthermore, it will need the permission to access external storage"</string>
    <string name="dialog_text_error_permission">This application can\'t operate without the requested permissions</string>
    <string name="dialog_text_download_warning">You are about to download %1$s of samples. Do you want to continue ?</string>
    <string name="dialog_text_download_progress">%1$s %% (%2$s)\n%3$s / %4$s</string>
    <string name="dialog_text_download_downloading">Downloading: </string>
    <string name="dialog_text_download_checking_file">Checking file integrity: </string>
    <string name="dialog_text_result_upload">Help us improve the benchmark results by uploading the screenshots taken during testing. This upload is %1$s in size, only upload if you have a fast connection.</string>
    <string name="dialog_text_android_10">Due to limitations in Android 10, the benchmark cannot run on this device. We apologies for the inconvenience.</string>
    <string name="dialog_text_confirm_bench_delete">Are you sure you want to delete this benchmark ?</string>
    <string name="dialog_text_sample_free_space">Do you want to delete the media samples, and free some space, now that the benchmark is done ?</string>
    <string name="toast_text_error_prep_upload">There was error while preparing the upload</string>
    <string name="toast_error_mountpoint_no_space">The isn\'t enough space in the new storage location</string>
    <string name="toast_error_file_transfert">There was a problem while transferring files</string>
    <string name="dialog_btn_continue">Continue</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_discard">Discard</string>
    <string name="dialog_btn_done">Done</string>
    <string name="dialog_btn_visit">Visit</string>
    <string name="dialog_btn_upload_with">Upload with screenshots</string>
    <string name="dialog_btn_upload_without">Upload without screenshots</string>
    <string name="dialog_btn_yes">Yes</string>
    <string name="dialog_btn_no">No</string>
    <string name="specs_title">DEVICE</string>
    <string name="specs_model">Model</string>
    <string name="specs_android">Android</string>
    <string name="specs_cpu">CPU</string>
    <string name="specs_cpuspeed">CPU Speed</string>
    <string name="specs_memory">Memory</string>
    <string name="specs_resolution">Resolution</string>
    <string name="specs_free_space">Free space</string>
    <string name="explanation_title">BENCHMARK</string>
    <string name="explanation_text">
        This benchmark will test your device\'s video capabilities using the VLC Media Player.\nYou can start a benchmark with the left button below, or start 3 benchmarks and get the average results with the right button below.
    </string>
    <string name="missing_samples">Missing test samples.</string>
    <string name="download_warning">
        To perform a benchmark, some test samples need to be downloaded.\nYou need to be connected to the wifi in order to download them.\nPlease note it could take some time and storage space, as there may be many.\nFurthermore, the said list is likely to evolve.
    </string>
    <string name="dialog_text_starting">Starting benchmark</string>
    <string name="progress_text_format">%1$s %%\nFile: %2$d/%3$d\nTest mode: %4$s</string>
    <string name="progress_text_format_loop">%1$s %% \n File: %2$d/%3$d \n Test mode: %4$s | Loop %5$d/%6$d</string>
    <string name="dialog_text_file_check_progress">File: %1$d/%2$d </string>
    <string name="score">Score: </string>
    <string name="result_score">%1$s</string>
    <string name="detail_software">Software</string>
    <string name="detail_hardware">Hardware</string>
    <string name="detail_score">Score: %1$s / 50</string>
    <string name="detail_bad_screenshots">Percent of bad screenshots: %1$s %%</string>
    <string name="detail_frames_dropped">Frames dropped: %1$d</string>
    <string name="detail_warning_number">Number of warnings: %1$d</string>
    <string name="result_canceled">VLC has crashed</string>
    <string name="result_no_hw">No hardware decoder</string>
    <string name="result_connection_failed">Connection failed to audio service</string>
    <string name="result_playback_error">VLC is not able to play this file, it could be incorrect path/uri, not supported codec or broken file"</string>
    <string name="result_hardware_acceleration_error">Error with hardware acceleration, user refused to switch to software decoding</string>
    <string name="result_video_track_lost">VLC continues playback, but for audio track only. (Audio file detected or user chose to)</string>
    <string name="result_vlc_crash">VLC Benchmark has crashed</string>
    <string name="result_unknown">Unknown problem</string>
    <string name="onboarding_title_intro">Welcome</string>
    <string name="onboarding_img_intro">Onboarding introduction icon</string>
    <string name="onboarding_btn_previous">Previous button</string>
    <string name="onboarding_btn_next">Next button</string>
</resources>