<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general_pref_category"
        android:key="category_general">

        <Preference
            android:title="@string/delete_saves_pref"
            android:key="@string/delete_saves_key"/>

        <Preference
            android:title="@string/delete_samples_pref"
            android:key="@string/delete_samples_key"/>

        <Preference
            android:title="@string/connect_pref"
            android:key="@string/connect_key"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/storage_pref_category">

        <ListPreference
            android:title="@string/storage_pref"
            android:key="@string/storage_key"
            android:defaultValue="@string/internal_memory"
            android:entryValues="@array/storage_values"
            android:entries="@array/storage_values"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/misc_pref_category">

        <Preference
            android:title="@string/about_pref"
            android:key="about_key"/>

    </PreferenceCategory>

</PreferenceScreen>