<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/layout_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/default_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:orientation="vertical"
        android:gravity="bottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/text_title_size"/>
            
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_icon_benchmark"
                android:scaleType="fitXY"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/about_description"
            android:textSize="@dimen/text_imp_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/about_copyright"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/about_authors"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/about_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:autoLink="web"
            android:layout_marginTop="@dimen/default_margin"
            android:textSize="@dimen/text_size"
            android:textColor="@color/orange800"/>

        <TextView
            android:id="@+id/about_bench_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:autoLink="web"
            android:layout_marginTop="@dimen/default_margin"
            android:textSize="@dimen/text_size"
            android:textColor="@color/orange800"/>

        <TextView
            android:id="@+id/revision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/about_revision"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/vlc_min_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/about_vlc_min"
            android:textSize="@dimen/text_size">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/about_compiled_by"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/about_compiled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

</ScrollView>